# synth_inference_tests

./: .gitignore  README.md  pyproject.toml
examples/: analyse.py  compare.py  pdfs.yaml  test_cobaya.py  test_gpry.py  test_pdf.py  test_pyvbmc.py  test_sampler.py  wrapper_cobaya.py  wrapper_gpry.py  wrapper_polychord.py  wrapper_pyvbmc.py
synth_inference_tests/: analysis.py  get_pdf.py  io.py  mpi.py  pdf.py  plots.py  run.py  utils.py
synth_inference_tests/pdfs/: __init__.py  funnel.py  gaussian.py  gaussianmix.py  loggamma.py  loggammamix.py  rosenbrock.py
synth_inference_tests/pdfs/data/: loggamma.json
