[project]
name = "synth_inference_tests"
version = "0.5"
dependencies = [
    "numpy", "scipy", "pandas", "getdist"
]

[tool.setuptools.package-data]
synth_inference_tests = ["pdfs/data/*.json"]

[tool.ruff.lint]
ignore = ["E731"]
extend-select = ["I"]
preview = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff]
line-length = 90
target-version = "py310"
